--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "postinstall": "npm run build"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
