Fix Render build configuration

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: free  # Free tier
     buildCommand: npm install && npm run build
     startCommand: npm start
+    rootDir: backend
     envVars:
       - key: NODE_ENV
         value: production
