--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.11.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
